Fix margin collapse

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -129,6 +129,10 @@ p.subtitle {
   color: red;
 }
 
+header {
+  display: grid;
+}
+
 article {
   padding: 5rem 0rem;
 }
